# fluffy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.1.1.md  events.md  index.html
examples/: delete_demo.py  permission_demo.py  spend_demo.py
migrations/: 0001_init.sql  0002_spend_ledger_index.sql  0003_confirm_state.sql  0004_permission_grants.sql
src/fluffy/: __init__.py  audit.py  cli.py  confirm.py  context.py  db.py  exceptions.py  guard.py  permissions.py  redact.py  secrets.py  spend.py
src/fluffy/adapters/: __init__.py  langchain.py
tests/: conftest.py  test_audit.py  test_cli.py  test_confirm.py  test_db.py  test_guard.py  test_langchain_adapter.py  test_permissions.py  test_redact.py  test_secrets.py  test_spend.py
tests/bench/: test_benchmarks.py
tests/e2e/: flows.py  test_spec_acceptance.py
