[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluffy"
dynamic = ["version"]
description = "A drop-in guard layer for autonomous agents: secret redaction, hard spend caps, typed confirmation for destructive actions, and in-conversation permission changes."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "fluffy contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
fluffy = "fluffy.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "ruff",
    "mypy",
    # For the adapter integration tests (FakeListLLM + AgentExecutor).
    "langchain>=0.3,<1.0",
]
langchain = ["langchain-core>=0.3,<2"]

[tool.hatch.version]
path = "src/fluffy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fluffy"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "fluffy/migrations"

[tool.hatch.build.targets.sdist]
include = ["src", "migrations", "tests", "LICENSE", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Fast suite by default; run the wheel-based spec acceptance with `-m e2e`
# and the performance budgets with `-m bench`.
addopts = "-m 'not e2e and not bench'"
markers = [
    "bench: D8 performance-budget benchmarks (CI bench job runs these)",
    "e2e: spec acceptance against the built wheel in a clean venv (slow)",
]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
